.k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: app
  labels:
    app.kubernetes.io/name: app
    app.kubernetes.io/instance: app
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/created-by: nico
spec:
  type: NodePort
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
      nodePort: 30000
  selector:
    app.kubernetes.io/name: app
    app.kubernetes.io/instance: app
