.k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  namespace: app
  labels:
      app.kubernetes.io/name: app
      app.kubernetes.io/instance: app
      app.kubernetes.io/version: "1.0.0"
      app.kubernetes.io/managed-by: kustomize
      app.kubernetes.io/created-by: nico
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: app.k8sw.devninjas.io
      http:
        paths:
          - backend:
              service:
                name: app
                port:
                  name: http
            path: /
            pathType: Prefix
